<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">
      
 <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_weight="1"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content" 
        android:gravity="center"       
        android:onClick="OnBack"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:text="@string/Back" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="OnRefresh"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:text="@string/Refresh" />
    
</LinearLayout>

 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_weight="1"
     android:orientation="vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp" >

     <TextView
         android:id="@+id/txtTemperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="left"
         android:text="@string/Temperature" />

     <Button
         android:id="@+id/btnTemperature"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:onClick="OnTemperature"
         android:text="Not available" />

     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="left"
         android:layout_marginTop="50dp"
         android:text="@string/Pressure" />

     <Button
         android:id="@+id/btnPressure"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:onClick="OnPressure"
         android:text="Not available" />

     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="left"
         android:layout_marginTop="50dp"
         android:text="@string/Light" />

     <Button
         android:id="@+id/btnLight"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:onClick="OnLight"
         android:text="Not available" />
 </LinearLayout>

<LinearLayout   
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/Parameter1" />
    
    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Not available" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="left"
        android:text="Value 2" />
    
    <Button
        android:id="@+id/button7"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
       android:text="Not available" />
</LinearLayout>


 <LinearLayout 
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="right"
  	android:orientation="vertical"
    android:layout_weight="1"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >  
    
      <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="B23 Floor 1" />    

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="10dp"
        android:text="Locaton : Room126" />
    
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="10dp"
        android:text="Sensor: #2" />  
 </LinearLayout>

</LinearLayout>